# NodeForge

./: .env.example  .gitignore  AGENTS.md  AMD_009.md  BRIEFING.md  CLAUDE.md  Claude.html  README.md  file_header_template.py  idiograph.toml  nodeforge.toml  pyproject.toml  test_graph.json
.github/workflows/: tests.yml
Claude_files/: 468742119653388  c6a992d55-B3uIaQfR.css  f(1).txt  f(2).txt  f(3).txt  f(4).txt  f(5).txt  f(6).txt  f(7).txt  f(8).txt  f(9).txt  f.txt  isolated-segment.html  js  js(1)  saved_resource(1).html
docs/: amd-016-llm-node-placement-2.md  blueprint.md  blueprint_amendments_1.md  blueprint_amendments_2.md  blueprint_amendments_3.md  nodeforge_architecture.md  phase_0_summary.md  phase_1_summary.md  phase_2_summary.md  phase_3_summary.md  phase_4.5_summary.md  phase_5_summary.md  phase_6_summary.md  phase_7_summary.md  phase_8_9_task_inventory.md  rename_summary.md  session-2026-04-08.md  session-2026-04-09.md  session_summary_2026_04_03.md  session_workflow.md  spec-arxiv-pipeline-final.md  state_management_migration.md  workflow.md
docs/decisions/: amendments.md
docs/phases/: phase-02-project-structure-reusability.md  phase-04-05-graph-query-analysis.md  phase-05-testing-logging-config.md  phase-06-async-execution-orchestration.md  phase-07-architecture-refinement.md  phase-08-mcp-integration.md
docs/sessions/: session-2026-04-06-2.md  session-2026-04-09-2.md  session-2026-04-10.md  session-2026-04-13-2.md  session-2026-04-14.md  session-2026-04-15-2.md  session-2026-04-15.md  session-2026-04-16-2.md  session-2026-04-16.md  session-2026-04-17.md  session-2026-04-22-suppressed-edge-refactor.md  (+9 more)
scripts/: gen_diagrams.py  new_amendment.py  new_session_summary.py  preflight.sh
tests/: conftest.py  test_executor.py  test_graph.py  test_models.py  test_query.py
(+79 files in other folders)
