[project]
name = "idiograph"
version = "0.1.0"
description = "Semantic graph system for VFX and AI workflows"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.86.0",
    "httpx>=0.28.1",
    "mcp>=1.26.0",
    "networkx>=3.6.1",
    "numpy>=2.4.4",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "scipy>=1.17.1",
    "typer>=0.12.0",
]

[project.optional-dependencies]
qt = ["pyside6"]

[project.scripts]
idiograph = "idiograph.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/idiograph"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
]
